--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,5 +1,14 @@
-{{!-- The following component displays Ember's default welcome message. --}}
-{{welcome-page}}
-{{!-- Feel free to remove this! --}}
-
+<nav class="navbar navbar-inverse">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="#">InstAnswer</a>
+    </div>
+    <ul class="nav navbar-nav">
+      <li class="active"><a href="#">Homepage</a></li>
+      <li><a href="#">About</a></li>
+      <li><a href="#">Contact</a></li>
+      <li><a href="#"></a></li>
+    </ul>
+  </div>
+</nav>
 {{outlet}}
