added the homepage button

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -4,10 +4,9 @@
       <a class="navbar-brand" href="#">InstAnswer</a>
     </div>
     <ul class="nav navbar-nav">
-      <li class="active"><a href="#">Homepage</a></li>
-      <li><a href="#">About</a></li>
-      <li><a href="#">Contact</a></li>
-      <li><a href="#"></a></li>
+    <li>{{#link-to 'index'}}HOME{{/link-to}}</li>  
+    <li>{{#link-to 'about'}}ABOUT US{{/link-to}}</li>
+    <li>{{#link-to 'contact'}}CONTACT{{/link-to}}</li>
     </ul>
   </div>
 </nav>
