--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,1 +1,12 @@
-{{outlet}}
+<p>I call it "Theory of Problem Solving": a blog of tutorials and in-depth analyses of the problems that I solve. I would like to share this with everyone in the Codeforces community!
+
+It's just getting started, and many of my analyses are really long, because I wanted to focus on the process more than the solution. Anyway, take a look at the analysis of Codeforces Round #224 (Div. 2) E — Ksenia and Combinatorics!
+Feel free to make comments or requests for specific problems!
+Thanks everyone! Happy Coding! I will be posting more soon. Cheers!
+</p>
+
+<ol>
+  {{#each model as |question|}}
+     <li>{{question.Author}}'s {{question.Question}} in {{question.Additional}}</li>
+  {{/each}}
+</ol>
