added the module

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -7,6 +7,6 @@ Thanks everyone! Happy Coding! I will be posting more soon. Cheers!
 
 <ol>
   {{#each model as |question|}}
-     <li>{{question.Author}}'s {{question.Question}} in {{question.Additional}}</li>
+     <li><b>{{question.author}}</b> {{question.question}} in {{question.additional}}</li>
   {{/each}}
 </ol>
