--- a/app/templates/components/question-tile.hbs
+++ b/app/templates/components/question-tile.hbs
@@ -5,5 +5,5 @@
   {{else}}
     <button {{action 'additionalShow'}}>More info</button>
   {{/if}}
-  <button {{action 'delete' rental}}>Delete Rental</button>
+  <button {{action 'delete' question}}>Delete Question</button>
 </li>
