--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -11,3 +11,5 @@ Thanks everyone! Happy Coding! I will be posting more soon. Cheers!
     {{question-tile question=question destroyQuestion="destroyQuestion"}}
   {{/each}}
 </ol>
+
+{{new-question saveQuestion2="saveQuestion3"}}
