--- a/app/templates/components/new-question.hbs
+++ b/app/templates/components/new-question.hbs
@@ -1,14 +1,26 @@
+
 {{#if addNewQuestion}}
-<h1>New Question</h1>
-<div>
- <form>
-   <div class="form-group">
-     <label for="question2017">Ask Question</label>
-     {{input value=text id="query"}}
-   </div>
-   <button {{action 'saveQuestion'}}>Save</button>
- </form>
-</div>
+  <h1>New Question</h1>
+  <div>
+    <form>
+      <div class="form-group">
+        <label for="city">Question</label>
+        {{input value=question id="question"}}
+      </div>
+
+      <div class="form-group">
+        <label for="bedrooms">Additional</label>
+        {{input value=additional id="additional"}}
+      </div>
+
+      <div class="form-group">
+        <label for="image">Author</label>
+        {{input value=image id="image"}}
+      </div>
+
+      <button {{action 'saveQuestion1'}}>Save</button>
+    </form>
+  </div>
 {{else}}
-  <button {{action 'questionFormShow'}}>New question</button>
+  <button {{action 'questionFormShow'}}>New Question</button>
 {{/if}}
