--- a/app/templates/components/question-tile.hbs
+++ b/app/templates/components/question-tile.hbs
@@ -5,5 +5,6 @@
   {{else}}
     <button {{action 'additionalShow'}}>More info</button>
   {{/if}}
+  {{update-question question=question update="update"}}
   <button {{action 'delete' question}}>Delete Question</button>
 </li>
