--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -8,7 +8,7 @@ Thanks everyone! Happy Coding! I will be posting more soon. Cheers!
 
 <ol>
   {{#each model as |question|}}
-    {{question-tile question=question destroyQuestion="destroyQuestion"}}
+    {{question-tile question=question  update="update" destroyQuestion="destroyQuestion"}}
   {{/each}}
 </ol>
 
