--- a/app/templates/components/question-tile.hbs
+++ b/app/templates/components/question-tile.hbs
@@ -1,10 +1,10 @@
 <li>
-  {{question.question}} by  {{question.author}}
+  {{#link-to 'question' question.id}} {{question.question}} by  {{question.author}}{{/link-to}}
   {{#if isAdditionalShowing}}
     <p>{{question.additional}} {{action 'additionalHide'}}</p>
   {{else}}
     <button {{action 'additionalShow'}}>More info</button>
   {{/if}}
-  {{update-question question=question update="update"}}
+
   <button {{action 'delete' question}}>Delete Question</button>
 </li>
