--- a/app/templates/components/update-question.hbs
+++ b/app/templates/components/update-question.hbs
@@ -9,14 +9,13 @@
 
       <div class="form-group">
         <label for="question">question</label>
-        {{input value=type id="question" placeholder=question.question}}
+        {{input value=question id="question" placeholder=question.question}}
       </div>
 
       <div class="form-group">
-        <label for="city">Additional</label>
+        <label for="additional">Additional</label>
         {{input value=additional id="additional" placeholder=question.additional}}
       </div>
-
       <button {{action 'update' question}}>Save</button>
     </form>
   </div>
