add a rental attribute on the review model to refer to one of our rental objects

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -21,3 +21,5 @@ Thanks everyone! Happy Coding! I will be posting more soon. Cheers!
     <li>{{answer.content}} {{answer.author}}</li>
   {{/each}}
 </ul>
+
+{{new-answer saveAnswer="saveAnswer"}}
