--- a/app/templates/question.hbs
+++ b/app/templates/question.hbs
@@ -1,6 +1,8 @@
 
-<h2>More information about {{model.question}}'s {{model.author}}:</h2>
+<h2>More information about {{model.question}} {{model.author}}:</h2>
 
 {{update-question question=model update="update"}}
 
 {{question-detail question=model destroyQuestion="destroyQuestion"}}
+
+{{new-answer saveAnswer="saveAnswer" question=model}}
